<resources>
    <string name="app_name">PokeWiki</string>
    <string name="type_username">Escribe tu nombre de usuario para iniciar:</string>
    <string name="login">INGRESA</string>
    <string name="username">Nombre de usuario</string>
    <string name="dont_have_user">¿No tienes usuario?</string>
    <string name="create_new_user">¡Crea uno!</string>
    <string name="create_user_title">CREACIÓN DE USUARIO</string>
    <string name="create_user_field">Escribe el nombre de usario que deseas:</string>
    <string name="create_user_button">CREAR</string>
    <string name="get_pokemon_text_field">Atrapa un pokemon!</string>
    <string name="name_pokemon_text">Escribe el nombre del pokemon</string>
    <string name="search_pokemon_text">Busca un pokemon!</string>
    <string name="my_pokedex">Mi pokedex!</string>
    <string name="watch_btn">VER</string>
    <string name="catch_btn">ATRAPAR</string>
    <string name="random_btn">RANDOM</string>
    <string name="search_btn">BUSCAR</string>
    <string name="username_login_fail">Nombre de usuario incorrecto o no existe</string>
    <string name="username_empty_fail">Nombre de usuario incorrecto o no existe</string>
    <string name="username_clone_fail">Ese nombre de usuario ya existe, escribe otro</string>
    <string name="pokename_empty">Escribe un nombre de pokemon valido</string>
    <string name="success_catch">Se ha capturado el pokemon con exito</string>
    <string name="pokemon_not_found">No se ha encontrado ningún pokemon capturado con ese nombre</string>
    <string name="pokemon_exist">Ese pokemon ya lo capturaste!</string>
    <string name="success_leave">Se ha liberado al pokemon</string>
    <string name="defense_stat">Defensa</string>
    <string name="atack_stat">Ataque</string>
    <string name="health_stat">Vida</string>
    <string name="velocity_stat">Velocidad</string>
    
</resources>