<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/pikawikilogo"
                        tools:layout_editor_absoluteY="50dp" />

                    <Button
                        android:id="@+id/exitButtonM"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/circle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="267dp"
                        android:layout_height="49dp"
                        app:layout_constraintEnd_toStartOf="@+id/exitButtonM"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="31dp"
                        android:layout_height="34dp"
                        android:elevation="100dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/exitButtonM"
                        app:layout_constraintStart_toStartOf="@+id/exitButtonM"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/exit" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/bar"
            tools:layout_editor_absoluteX="0dp">


            <Button
                android:id="@+id/catchPokButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="Atrapar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/leaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="Soltar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/catchPokButton" />

            <ImageView
                android:id="@+id/pokeInfoImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/catchPokButton" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="Nombre"
                style="@style/titleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokeInfoImage" />

            <TextView
                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                tools:text="Tipo"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.783"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeText"
                app:srcCompat="@drawable/arma" />

            <TextView
                android:id="@+id/attackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="@string/atack_stat"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="228dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.213"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeText"
                app:srcCompat="@drawable/visa" />

            <TextView
                android:id="@+id/speedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                tools:text="@string/velocity_stat"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="228dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.772"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeText"
                app:srcCompat="@drawable/velocidad" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/velocity_stat"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="@+id/imageView11"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="@+id/imageView11" />

            <TextView
                android:id="@+id/defenseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="@string/defense_stat"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView121"
                app:layout_constraintStart_toStartOf="@+id/imageView121"
                app:layout_constraintTop_toBottomOf="@+id/imageView121" />

            <TextView
                android:id="@+id/lifeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:layout_marginBottom="10dp"
                tools:text="@string/health_stat"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <ImageView
                android:id="@+id/imageView121"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.216"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeText"
                app:srcCompat="@drawable/defensa" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/health_stat"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintStart_toStartOf="@+id/imageView13" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/atack_stat"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="@+id/imageView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/defense_stat"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView121"
                app:layout_constraintEnd_toEndOf="@+id/imageView121"
                app:layout_constraintHorizontal_bias="0.166"
                app:layout_constraintStart_toStartOf="@+id/imageView121" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>